--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -9,8 +9,8 @@
             height: 100vh;
             background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
-            background-position: center top;
-            background-repeat: no-repeat;
+            background-position: center center;
+            background-repeat: repeat-y;
             background-size: cover;
         }
         main {
@@ -26,6 +26,10 @@
 <body>
     <main>
         <h1>Teste de imagem de Fundo</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, dolorem itaque deleniti ducimus aliquam veniam suscipit numquam iusto maxime nesciunt error rerum recusandae hic ea omnis neque fuga aut atque! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur iusto porro, magni quis fugit magnam totam beatae eum facere, voluptatum qui. Neque atque quia minus, consequatur alias quibusdam repellendus nam? Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam eligendi, sequi voluptatem alias beatae ducimus magni similique error inventore pariatur numquam! Magnam accusantium voluptate ex consequatur sint recusandae provident quam.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, dolorem itaque deleniti ducimus aliquam veniam suscipit numquam iusto maxime nesciunt error rerum recusandae hic ea omnis neque fuga aut atque! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur iusto porro, magni quis fugit magnam totam beatae eum facere, voluptatum qui. Neque atque quia minus, consequatur alias quibusdam repellendus nam? Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam eligendi, sequi voluptatem alias beatae ducimus magni similique error inventore pariatur numquam! Magnam accusantium voluptate ex consequatur sint recusandae provident quam.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, dolorem itaque deleniti ducimus aliquam veniam suscipit numquam iusto maxime nesciunt error rerum recusandae hic ea omnis neque fuga aut atque! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur iusto porro, magni quis fugit magnam totam beatae eum facere, voluptatum qui. Neque atque quia minus, consequatur alias quibusdam repellendus nam? Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam eligendi, sequi voluptatem alias beatae ducimus magni similique error inventore pariatur numquam! Magnam accusantium voluptate ex consequatur sint recusandae provident quam.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, dolorem itaque deleniti ducimus aliquam veniam suscipit numquam iusto maxime nesciunt error rerum recusandae hic ea omnis neque fuga aut atque! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur iusto porro, magni quis fugit magnam totam beatae eum facere, voluptatum qui. Neque atque quia minus, consequatur alias quibusdam repellendus nam? Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam eligendi, sequi voluptatem alias beatae ducimus magni similique error inventore pariatur numquam! Magnam accusantium voluptate ex consequatur sint recusandae provident quam.</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, dolorem itaque deleniti ducimus aliquam veniam suscipit numquam iusto maxime nesciunt error rerum recusandae hic ea omnis neque fuga aut atque! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur iusto porro, magni quis fugit magnam totam beatae eum facere, voluptatum qui. Neque atque quia minus, consequatur alias quibusdam repellendus nam? Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam eligendi, sequi voluptatem alias beatae ducimus magni similique error inventore pariatur numquam! Magnam accusantium voluptate ex consequatur sint recusandae provident quam.</p>
     </main>
 </body>
