erro height 46vh

--- a/projeto-cordel/projeto-cordel.html
+++ b/projeto-cordel/projeto-cordel.html
@@ -8,14 +8,11 @@
     <!--   https://professorguanabara.github.io/projeto-cordel/   -->
 </head>
 <body>
-    <div id="inicio">
-        <h1>
-            Cordel Moderno
-        </h1>
-        
-        <p>
-            Por <a href="https://www.recantodasletras.com.r/poesias/3186743">Milton Duarte</a>
-        </p>
+    <div id="container">
+        <div id="conteudo">
+            Cordel Moderno 
+            <p>Por <a href="https://www.recantodasletras.com.r/poesias/3186743">Milton Duarte</a></p>
+        </div>
     </div>
 
     <p>
