--- a/exercicios/ex023/tabela001.html
+++ b/exercicios/ex023/tabela001.html
@@ -11,20 +11,20 @@
 
         table {
             width: 400px;
+            height: 400px;
             border-collapse: collapse;
         }
 
         td {
             border: 1px solid black;
+            text-align: center; /* Alinhamento horizontal */
+            vertical-align: middle; /* Alinhamento vertical */
         }
 
-        tr.linha {
-            background-color: rgb(77, 81, 72);
-        } 
-
-        td.dado {
-            background-color: yellow;
+        .numero {
+            text-align: right;
         }
+
     </style>
 </head>
 <body>
@@ -45,7 +45,7 @@
         <tr class="linha"> <!-- Segunda linha -->
             <td>A2</td>
             <td>B2</td>
-            <td>C2</td>
+            <td class="numero">C2</td>
         </tr>    
         <tr> <!-- Terceira linha -->
             <td>A3</td>
