Mesclagem de Células

--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -11,6 +11,7 @@
         table {
             width: 400px;
             border-collapse: collapse;
+            position: relative;
         }
         td, th {
             border: 1px solid black;
@@ -23,8 +24,13 @@
             padding: 5px;       
         }
         thead, tfoot {	
-            background-color: rgba(0, 0, 0, 0.87);
+            background-color: rgba(0, 0, 0, 0.853);
             color: white;
+        }
+        thead > tr > th {
+            position: sticky;
+            top: 0;
+            background-color: rgba(0, 0, 0, 0.837);
         }
         td.num {
             text-align: right;
@@ -95,7 +101,78 @@
                 <td>Pará</td>
                 <td class="num">8.121.025</td>
             </tr>
-
+            <tr>
+                <td>São Paulo</td>
+                <td class="num">44.411.238</td>
+            </tr>
+            <tr>
+                <td>Minas Gerais</td>
+                <td class="num">20.538.718</td>
+            </tr>
+            <tr>
+                <td>Rio de Janeiro</td>
+                <td class="num">16.054.524</td>
+            </tr>
+            <tr>
+                <td>Bahia</td>
+                <td class="num">14.141.626</td>
+            </tr>
+            <tr>
+                <td>Paraná</td>
+                <td class="num">11.444.380</td>
+            </tr>
+            <tr>
+                <td>Rio Grande do Sul</td>
+                <td class="num">10.882.965</td>
+            </tr>
+            <tr>
+                <td>Pernambuco</td>
+                <td class="num">9.058.931</td>
+            </tr>
+            <tr>
+                <td>Ceará</td>
+                <td class="num">8.794.957</td>
+            </tr>
+            <tr>
+                <td>Pará</td>
+                <td class="num">8.121.025</td>
+            </tr>
+            <tr>
+                <td>São Paulo</td>
+                <td class="num">44.411.238</td>
+            </tr>
+            <tr>
+                <td>Minas Gerais</td>
+                <td class="num">20.538.718</td>
+            </tr>
+            <tr>
+                <td>Rio de Janeiro</td>
+                <td class="num">16.054.524</td>
+            </tr>
+            <tr>
+                <td>Bahia</td>
+                <td class="num">14.141.626</td>
+            </tr>
+            <tr>
+                <td>Paraná</td>
+                <td class="num">11.444.380</td>
+            </tr>
+            <tr>
+                <td>Rio Grande do Sul</td>
+                <td class="num">10.882.965</td>
+            </tr>
+            <tr>
+                <td>Pernambuco</td>
+                <td class="num">9.058.931</td>
+            </tr>
+            <tr>
+                <td>Ceará</td>
+                <td class="num">8.794.957</td>
+            </tr>
+            <tr>
+                <td>Pará</td>
+                <td class="num">8.121.025</td>
+            </tr>
         </tbody>
         <tfoot>
             <tr>
@@ -104,5 +181,6 @@
             </tr>
         </tfoot>
     </table>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat reiciendis delectus totam ducimus enim veniam. Error, corrupti exercitationem. Ullam nobis numquam, quidem dolore error ducimus vero sint labore adipisci nisi. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis fugit sit expedita debitis ipsam reiciendis id aliquam necessitatibus amet ducimus accusantium eveniet maiores, ipsum officiis enim sed quasi provident! Nisi! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit iste adipisci necessitatibus vitae quia distinctio ut magni in alias cupiditate, maiores nulla quisquam maxime natus doloremque dolores, impedit molestiae inventore? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat reiciendis delectus totam ducimus enim veniam. Error, corrupti exercitationem. Ullam nobis numquam, quidem dolore error ducimus vero sint labore adipisci nisi. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis fugit sit expedita debitis ipsam reiciendis id aliquam necessitatibus amet ducimus accusantium eveniet maiores, ipsum officiis enim sed quasi provident! Nisi! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit iste adipisci necessitatibus vitae quia distinctio ut magni in alias cupiditate, maiores nulla quisquam maxime natus doloremque dolores, impedit molestiae inventore?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat reiciendis delectus totam ducimus enim veniam. Error, corrupti exercitationem. Ullam nobis numquam, quidem dolore error ducimus vero sint labore adipisci nisi. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis fugit sit expedita debitis ipsam reiciendis id aliquam necessitatibus amet ducimus accusantium eveniet maiores, ipsum officiis enim sed quasi provident! Nisi! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit iste adipisci necessitatibus vitae quia distinctio ut magni in alias cupiditate, maiores nulla quisquam maxime natus doloremque dolores, impedit molestiae inventore?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat reiciendis delectus totam ducimus enim veniam. Error, corrupti exercitationem. Ullam nobis numquam, quidem dolore error ducimus vero sint labore adipisci nisi. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis fugit sit expedita debitis ipsam reiciendis id aliquam necessitatibus amet ducimus accusantium eveniet maiores, ipsum officiis enim sed quasi provident! Nisi! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit iste adipisci necessitatibus vitae quia distinctio ut magni in alias cupiditate, maiores nulla quisquam maxime natus doloremque dolores, impedit molestiae inventore?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat reiciendis delectus totam ducimus enim veniam. Error, corrupti exercitationem. Ullam nobis numquam, quidem dolore error ducimus vero sint labore adipisci nisi. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis fugit sit expedita debitis ipsam reiciendis id aliquam necessitatibus amet ducimus accusantium eveniet maiores, ipsum officiis enim sed quasi provident! Nisi! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit iste adipisci necessitatibus vitae quia distinctio ut magni in alias cupiditate, maiores nulla quisquam maxime natus doloremque dolores, impedit molestiae inventore?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat reiciendis delectus totam ducimus enim veniam. Error, corrupti exercitationem. Ullam nobis numquam, quidem dolore error ducimus vero sint labore adipisci nisi. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis fugit sit expedita debitis ipsam reiciendis id aliquam necessitatibus amet ducimus accusantium eveniet maiores, ipsum officiis enim sed quasi provident! Nisi! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit iste adipisci necessitatibus vitae quia distinctio ut magni in alias cupiditate, maiores nulla quisquam maxime natus doloremque dolores, impedit molestiae inventore?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat reiciendis delectus totam ducimus enim veniam. Error, corrupti exercitationem. Ullam nobis numquam, quidem dolore error ducimus vero sint labore adipisci nisi. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis fugit sit expedita debitis ipsam reiciendis id aliquam necessitatibus amet ducimus accusantium eveniet maiores, ipsum officiis enim sed quasi provident! Nisi! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit iste adipisci necessitatibus vitae quia distinctio ut magni in alias cupiditate, maiores nulla quisquam maxime natus doloremque dolores, impedit molestiae inventore?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat reiciendis delectus totam ducimus enim veniam. Error, corrupti exercitationem. Ullam nobis numquam, quidem dolore error ducimus vero sint labore adipisci nisi. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis fugit sit expedita debitis ipsam reiciendis id aliquam necessitatibus amet ducimus accusantium eveniet maiores, ipsum officiis enim sed quasi provident! Nisi! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit iste adipisci necessitatibus vitae quia distinctio ut magni in alias cupiditate, maiores nulla quisquam maxime natus doloremque dolores, impedit molestiae inventore?</p>
 </body>
 </html>
