--- a/exercicios/ex024/iframe001.html
+++ b/exercicios/ex024/iframe001.html
@@ -4,11 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estudos de iFrame</title>
+    <style>
+        iframe {
+            height: 400px;
+            width: 400px;
+        }
+    </style>
 </head>
 <body>
     <h1>Testando o uso de um iframe</h1>
-    <p>Acessando o site do <iframe src="https://www.cursoemvideo.com/" frameborder="0"></iframe> para aprender a programar</p>
+    <p>
+        Acessando o site do 
 
-    <p>Acessando o site do <iframe src="https://www.facebook.com.br" frameborder="0"></iframe></p>
+        <!-- Tamanho padrão 300x150 -->
+        <iframe src="https://www.cursoemvideo.com/" frameborder="" height="500" scolling="no">
+            <a href="https://www.cursoemvideo.com/">Curso em Vídeo</a>
+        </iframe>
+
+        para aprender a programar
+    </p>
+
+    <p>
+        O repositório do Guanabara
+
+        <iframe src="https://gustavoguanabara.github.io" frameborder="0" height="500" width="500">
+            no <a href="https://gustavoguanabara.github.io">Github</a>
+        </iframe> 
+
+        também é bem legal
+    </p>
 </body>
 </html>
