atualizai exercicio iframe002

--- a/exercicios/ex024/iframe002.html
+++ b/exercicios/ex024/iframe002.html
@@ -20,7 +20,9 @@
     <h1>Teste com iframe</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe itaque laborum unde beatae facilis ea quibusdam dignissimos veritatis vero iusto quam corporis quisquam suscipit atque consequatur maiores earum, magni id. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam nesciunt itaque est dolorum quibusdam quae doloribus. Ratione dicta debitis iste recusandae! Et, dolores sapiente? Nam iste sunt officiis ducimus voluptatibus.</p>
 
-    <iframe src="pag001.html" frameborder="0" height="500" width="500"></iframe>
+    <iframe src="paginas-extras/pag001.html" frameborder="0" height="500" width="500">
+        <p>Infelizmente seu navegador não é compativel</p>
+    </iframe>
 
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Numquam sit veritatis culpa id, explicabo necessitatibus, iusto fugiat aspernatur est quis accusantium. Labore sequi illum officia temporibus? Necessitatibus fugiat libero quasi. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quibusdam, voluptate. Accusamus tempore id perferendis consequuntur magni minima, assumenda aliquam dicta placeat, vitae autem fugit eum totam voluptates recusandae! Totam, quam.</p>
 </body>
