--- a/exercicios/ex024/iframe003.html
+++ b/exercicios/ex024/iframe003.html
@@ -28,10 +28,12 @@
 
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem earum sequi dolor, et, officiis facilis tempora neque sapiente, non ex eligendi quo sunt nesciunt hic suscipit nemo. Quidem, quos eligendi! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam maiores soluta aliquam adipisci harum vitae odit natus nemo iusto fugiat optio dolorum sequi quisquam, voluptatem, magnam ex laboriosam doloremque culpa.</p>
 
-    <iframe id="tela" name="frame" src="" frameborder="0">
+    <iframe id="tela" name="frame" frameborder="0" srcdoc="<h1>Escolha uma das opções acima</h1><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis libero quo esse ipsam. Architecto earum qui, ab perspiciatis quos dolores.</p><img src='imagens/cursoemvideo.png'>">
+    </iframe>
         <p>Infelizmente seu navegador não é compatível com isso.</p>
     </iframe>
 
+    
      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis libero quo esse ipsam. Architecto earum qui, ab perspiciatis quos dolores. Illum adipisci praesentium modi quam, tempore ab corrupti dolore delectus? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae officiis atque harum totam. Minus amet ipsam, error cupiditate doloribus nesciunt distinctio quisquam tempora velit! Adipisci ad voluptatem nisi vel libero.</p>
 </body>
 </html>
