--- a/exercicios/ateste/index.html
+++ b/exercicios/ateste/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Testando</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Teste</h1>
-    <a href="file:///C:/Users/clebe/OneDrive/Documentos/estudos/html-css/ateste/index.html"></a>
+    <a href="foto-teste.jpeg" download="Foto teste" type="image/jpeg"><p>arquivo</p></a>
+    <div id="aurora">
+        Clique <a href="" value="mostrar" onclick="mostrar()" >aqui</a> para ver a imagem do arquivo
+    </div>
+    <img src="foto-teste.jpeg" alt="">
+    <p>final</p>
 </body>
 </html>
