--- a/exercicios/ex026/mq005/index.html
+++ b/exercicios/ex026/mq005/index.html
@@ -11,8 +11,8 @@
 <body>
     <header>
         <h1>Meu Site</h1>
-        <div onclick="clickMenu()" id="idmenu">
-            <span class="material-symbols-outlined">menu</span>
+        <div onclick="clickMenu()">
+            <span id="idmenu" class="material-symbols-outlined">menu</span>
         </div>
         
         <menu id="itens">
