--- a/exercicios/ex026/mq005/index.html
+++ b/exercicios/ex026/mq005/index.html
@@ -12,7 +12,7 @@
     <header>
         <h1>Meu Site</h1>
         <div onclick="clickMenu()">
-            <span id="idmenu" class="material-symbols-outlined">menu</span>
+            <span id="icone" class="material-symbols-outlined">menu</span>
         </div>
         
         <menu id="itens">
