--- a/exercicios/ex026/mq005/index.html
+++ b/exercicios/ex026/mq005/index.html
@@ -6,6 +6,7 @@
     <title>Media Query</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/media-query.css">
     <script src="script.js"></script>
 </head>
 <body>
@@ -26,8 +27,9 @@
         </menu>
     </header>
     <main>
-        <h2>Testando Media Queries</h2>
+
         <article>
+            <h2>Testando Media Queries</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, doloremque ex tenetur labore dolor voluptatem perspiciatis voluptatibus error temporibus rem obcaecati magni vitae nam esse sit! Exercitationem, qui dolore! Incidunt! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quo totam explicabo delectus pariatur incidunt minima quam deleniti est cumque, aspernatur eaque in eos mollitia porro soluta quaerat aliquam vero reprehenderit!</p>
 
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, doloremque ex tenetur labore dolor voluptatem perspiciatis voluptatibus error temporibus rem obcaecati magni vitae nam esse sit! Exercitationem, qui dolore! Incidunt! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quo totam explicabo delectus pariatur incidunt minima quam deleniti est cumque, aspernatur eaque in eos mollitia porro soluta quaerat aliquam vero reprehenderit!</p>
