final do projeto ex026

--- a/exercicios/ex026/mq005/index.html
+++ b/exercicios/ex026/mq005/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="estilos/media-query.css">
     <script src="script.js"></script>
 </head>
-<body>
+<body onresize="mudouTamanho()">
     <header>
         <h1>Meu Site</h1>
         <div onclick="clickMenu()">
