--- a/exercicios/ex027/flex013 - menu/index.html
+++ b/exercicios/ex027/flex013 - menu/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="desktop.css">
 </head>
 <body>
   <header>
@@ -31,9 +32,7 @@
         Perspiciatis tempore sed maxime culpa quo autem reiciendis veniam ducimus quas voluptate, distinctio maiores.
         Delectus, quae! Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat reiciendis sed maxime. Et
         sapiente veritatis tempore esse laboriosam perspiciatis inventore explicabo, deleniti autem, accusamus soluta a
-        dolore. Quo, magnam quasi. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus repudiandae enim
-        quo dolores aliquid! Perspiciatis tempore sed maxime culpa quo autem reiciendis veniam ducimus quas voluptate,
-        distinctio maiores. Delectus, quae!
+        dolore. Quo, magnam quasi.
       </p>
     </section>
   </main>
