--- a/exercicios/ex027/flex013 - menu/index.html
+++ b/exercicios/ex027/flex013 - menu/index.html
@@ -22,15 +22,18 @@
   </header>
   <main>
     <section>
-      <h1>
+      <h2>
         Teste de Flexbox
-      </h1>
+      </h2>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat reiciendis sed maxime. Et sapiente veritatis
         tempore esse laboriosam perspiciatis inventore explicabo, deleniti autem, accusamus soluta a dolore. Quo, magnam
         quasi. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus repudiandae enim quo dolores aliquid!
         Perspiciatis tempore sed maxime culpa quo autem reiciendis veniam ducimus quas voluptate, distinctio maiores.
-        Delectus, quae! Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat reiciendis sed maxime. Et
+        Delectus, quae! 
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat reiciendis sed maxime. Et
         sapiente veritatis tempore esse laboriosam perspiciatis inventore explicabo, deleniti autem, accusamus soluta a
         dolore. Quo, magnam quasi.
       </p>
