--- a/exercicios/ex027/flex014 - conteudo flex/index.html
+++ b/exercicios/ex027/flex014 - conteudo flex/index.html
@@ -19,7 +19,7 @@
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab dolorum asperiores commodi officia et exercitationem, ex culpa qui nulla illum aperiam distinctio, odio quo vitae unde, nobis veniam cupiditate Lorem ipsum dolor sit amet consectetur adipisicing elit. At maiores nemo nihil iste, laborum veniam expedita quia repellat cumque consequatur nisi cum molestias autem perspiciatis, placeat dolores ut amet commodi!</p>
         </div>
         <div class="media">
-          <img src="rb_777.png" alt="Criando site flexbox">
+          <img src="foto_quadro.png" alt="Criando site flexbox">
         </div>
       </article>
       <article class="text-media">
