exemplo flex concluido

--- a/exercicios/ex027/flex014 - conteudo flex/index.html
+++ b/exercicios/ex027/flex014 - conteudo flex/index.html
@@ -15,7 +15,7 @@
     <section class="flex-content">
       <article class="media-text">
         <div class="text">
-          <h2>Elemento Media->Text</h2>
+          <h2>Elemento Media -> Text</h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab dolorum asperiores commodi officia et exercitationem, ex culpa qui nulla illum aperiam distinctio, odio quo vitae unde, nobis veniam cupiditate Lorem ipsum dolor sit amet consectetur adipisicing elit. At maiores nemo nihil iste, laborum veniam expedita quia repellat cumque consequatur nisi cum molestias autem perspiciatis, placeat dolores ut amet commodi!</p>
         </div>
         <div class="media">
@@ -24,7 +24,7 @@
       </article>
       <article class="text-media">
         <div class="text">
-          <h2>Elemento Text=>Media</h2>
+          <h2>Elemento Text -> Media</h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab dolorum asperiores commodi officia et exercitationem, ex culpa qui nulla illum aperiam distinctio, odio quo vitae unde, nobis veniam cupiditate Lorem ipsum dolor sit amet consectetur adipisicing elit. At maiores nemo nihil iste, laborum veniam expedita quia repellat cumque consequatur nisi cum molestias autem perspiciatis, placeat dolores ut amet commodi!</p>
         </div>
         <div class="media">
