mais sobre grid layout

--- a/exercicios/ex028/testegrid.html
+++ b/exercicios/ex028/testegrid.html
@@ -8,12 +8,11 @@
 </head>
 <body>
   <div class="container">
-    <div>1</div>
-    <div>2</div>
-    <div>3</div>
-    <div>4</div>
-    <div>5</div>
-    <div>6</div>
+    <div class="red"></div>
+    <div class="blue"></div>
+    <div class="yellow"></div>
+    <div class="green"></div>
+    
   </div>
 </body>
 </html>
